@@ -1,3 +1,10 @@
+Mon Oct 26 08:32:08 UTC 2009  Olli Savia  <ops@iki.fi>
+
+        * tests/OS_Test.cpp:
+          Improved test to detect if std{out,err} is not associated
+          with an output stream. This may happen with Windows application
+          without a console window.
+
 Mon Oct 26 07:48:19 UTC 2009  Olli Savia  <ops@iki.fi>
 
         * ace/config-win32-msvc-10.h:
